Revision history for Web::Components

          - Renamed roles to Loader and Role
          - No longer calls req->loc_default unconditionally
          - Added tests and POD
          - Works with App::Doh

0.1.1     2015-08-14 01:20:58
          - Added project files to master branch
