@@ -5,7 +5,7 @@ use namespace::autoclean;
 use HTTP::Status          qw( HTTP_BAD_REQUEST HTTP_FOUND
                               HTTP_INTERNAL_SERVER_ERROR );
 use Try::Tiny;
-use Unexpected::Types     qw( ArrayRef HashRef Object );
+use Unexpected::Types     qw( ArrayRef HashRef Object RequestFactory );
 use Web::Components::Util qw( deref exception is_arrayref
                               load_components throw );
 use Web::ComposableRequest;
@@ -49,8 +49,7 @@ has 'views'       => is => 'lazy', isa => HashRef[Object],
    builder        => sub { load_components 'View', application => $_[ 0 ] };
 
 # Private attributes
-# TODO: Set isa to RequestFactory when Unexpected types next pushed to CPAN
-has '_factory'    => is => 'lazy', isa => Object,
+has '_factory'    => is => 'lazy', isa => RequestFactory,
    builder        => $_build__factory, handles => [ 'new_from_simple_request' ];
 
 # Private functions
@@ -179,19 +178,30 @@ Web::Components::Loader - Loads and instantiates MVC components
    package Component::Server;
 
    use Class::Usul;
+   use Plack::Builder;
+   use Web::Simple;
    use Moo;
 
-   has 'app'  => is => 'lazy', builder => sub {
+   has '_usul' => is => 'lazy', builder => sub {
       Class::Usul->new( config => { appclass => __PACKAGE__  } ) },
-      handles => [ 'config', 'log' ];
+      handles  => [ 'config', 'debug', 'l10n', 'lock', 'log' ];
 
    with q(Web::Components::Loader);
 
 =head1 Description
 
-Loads and instantiates MVC components
+Loads and instantiates MVC components. Searches the namespaces; C<Controller>,
+C<Model>, and C<View> in the consuming classes library root. Any components
+found are loaded and instantiated
+
+The component collection references are passed to the component constructors
+so that a component can discover any dependent components. The collection
+references are not fully populated when the component is instantiated so
+attributes that default to component references should be marked as lazy
 
 =head1 Configuration and Environment
+
+This role requires C<config> and C<log> methods in the consumimg class
 
 Defines the following attributes;
 
@@ -206,10 +216,6 @@ order
 
 A hash reference of model object references
 
-=item C<request_factory>
-
-An instance of L<Web::ComposableRequest>
-
 =item C<view>
 
 A hash reference of view object references
@@ -222,6 +228,28 @@ A hash reference of view object references
 
 Installs a response filter that processes and renders the responses from
 the controller methods
+
+Controller responses that do not match the expected signature are allowed to
+bubble up
+
+The expected controller return value signature is;
+
+   [ 'model_moniker', 'method_name', @web_simple_request_parameters ]
+
+The L<Web::Simple> request parameters are used to instantiate an instance of
+L<Web::ComposableRequest::Base>
+
+The specified method on the model select by the moniker is called passing the
+request object in. A hash references, the stash, is the expected response and
+this is passed along with the request object into the view which renders the
+response
+
+Array references, a L<Plack> response, are allowed to bubble up and bypass
+the call to the view
+
+If the stash contains a redirect attribute then a redirect response is
+generated. Any message intended to be viewed by the user is stored in the
+session and is retrieved by the next request
 
 =head1 Diagnostics
 
